footer fixed to hide overlap

--- a/css/style.css
+++ b/css/style.css
@@ -378,7 +378,7 @@ nav > ul {
 /* footer section */
 
 footer {
-  margin-top: 30px;
+
   background-image: url("../images/wavybackground.jpg");
   background-attachment: fixed;
   background-size: cover;
